[build-system]
requires = ['flit']
build-backend = 'flit.buildapi'

[tool.flit.metadata]
module = 'cssselect2'
author = 'Simon Sapin'
author-email = 'simon.sapin@exyr.org'
maintainer = 'CourtBouillon'
maintainer-email = 'contact@courtbouillon.org'
home-page = 'https://doc.courtbouillon.org/cssselect2/'
requires = ['tinycss2', 'webencodings']
requires-python = '>=3.6'
keywords = 'css elementtree'
description-file = 'README.rst'
classifiers = [
  'Development Status :: 5 - Production/Stable',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: BSD License',
  'Operating System :: OS Independent',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.6',
  'Programming Language :: Python :: 3.7',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: Implementation :: CPython',
  'Programming Language :: Python :: Implementation :: PyPy',
  'Topic :: Internet :: WWW/HTTP',
]

[tool.flit.metadata.requires-extra]
doc = ['sphinx', 'sphinx_rtd_theme']
test = ['pytest', 'pytest-cov', 'pytest-flake8', 'pytest-isort', 'coverage[toml]']

[tool.flit.metadata.urls]
Documentation = 'https://doc.courtbouillon.org/cssselect2/'
Code = 'https://github.com/Kozea/cssselect2/'
Issues = 'https://github.com/Kozea/cssselect2/issues'
Donation = 'https://opencollective.com/courtbouillon'

[tool.pytest.ini_options]
addopts = '--isort --flake8 --cov'

[tool.coverage.run]
branch = true
include = ['tests/*', 'cssselect2/*']

[tool.coverage.report]
exclude_lines = ['pragma: no cover', 'def __repr__', 'raise NotImplementedError']
omit = ['.*']

[tool.isort]
default_section = 'FIRSTPARTY'
multi_line_output = 4
