[build-system]
requires = ['flit_core >=3.2,<4']
build-backend = 'flit_core.buildapi'

[project]
name = 'cssselect2'
description = 'CSS selectors for Python ElementTree'
keywords = ['css', 'elementtree']
authors = [{name = 'Simon Sapin', email = 'simon.sapin@exyr.org'}]
maintainers = [{name = 'CourtBouillon', email = 'contact@courtbouillon.org'}]
requires-python = '>=3.9'
readme = {file = 'README.rst', content-type = 'text/x-rst'}
license = {file = 'LICENSE'}
dependencies = ['tinycss2', 'webencodings']
classifiers = [
  'Development Status :: 5 - Production/Stable',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: BSD License',
  'Operating System :: OS Independent',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.13',
  'Programming Language :: Python :: Implementation :: CPython',
  'Programming Language :: Python :: Implementation :: PyPy',
  'Topic :: Internet :: WWW/HTTP',
]
dynamic = ['version']

[project.urls]
Homepage = 'https://doc.courtbouillon.org/cssselect2/'
Documentation = 'https://doc.courtbouillon.org/cssselect2/'
Code = 'https://github.com/Kozea/cssselect2/'
Issues = 'https://github.com/Kozea/cssselect2/issues'
Changelog = 'https://github.com/Kozea/cssselect2/releases'
Donation = 'https://opencollective.com/courtbouillon'

[project.optional-dependencies]
doc = ['sphinx', 'furo']
test = ['pytest', 'ruff']

[tool.flit.sdist]
exclude = ['.*']

[tool.coverage.run]
branch = true
include = ['tests/*', 'cssselect2/*']

[tool.coverage.report]
exclude_lines = ['pragma: no cover', 'def __repr__', 'raise NotImplementedError']
omit = ['.*']

[tool.ruff.lint]
select = ['E', 'W', 'F', 'I', 'N', 'RUF']
ignore = ['RUF001', 'RUF002', 'RUF003']

[tool.ruff.lint.extend-per-file-ignores]
'docs/example.py' = ['I001']
