[metadata]
name = cssselect2
url = https://cssselect2.readthedocs.io/
version = file: cssselect2/VERSION
license = BSD
license_file = LICENSE
description = CSS selectors for Python ElementTree
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Simon Sapin
author_email = community@kozea.fr
platforms =
  Linux
  macOS
  Windows
keywords =
  css
  elementtree
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Developers
  License :: OSI Approved :: BSD License
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Internet :: WWW/HTTP
project_urls =
  Documentation = https://cssselect2.readthedocs.io/
  Code = https://github.com/Kozea/cssselect2/
  Issue tracker = https://github.com/Kozea/cssselect2/issues
  Donation = https://www.patreon.com/kozea

[options]
packages = find:
zip_safe = false
setup_requires = pytest-runner
install_requires =
  setuptools>=39.2.0
  tinycss2
  webencodings
tests_require =
  pytest-runner
  pytest-cov
  pytest-flake8
  pytest-isort
python_requires = >= 3.5

[options.package_data]
cssselect2 = VERSION
cssselect2.tests = *

[options.extras_require]
doc =
  sphinx
  sphinx_rtd_theme
test =
  pytest-runner
  pytest-cov
  pytest-flake8
  pytest-isort

[bdist_wheel]
python-tag = py3

[build_sphinx]
source-dir = docs
build-dir = docs/_build

[aliases]
test = pytest

[tool:pytest]
addopts = --flake8 --isort cssselect2
norecursedirs = build dist .cache .eggs .git

[coverage:run]
branch = True
include = cssselect2/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise NotImplementedError
omit =
    .*

[isort]
default_section = THIRDPARTY
multi_line_output = 4
